Example php script

--- a/example.html
+++ b/example.html
@@ -2,7 +2,7 @@
 <script type="text/javascript">
 	$(document).ready(function(){ldelim}
 	$("#paginationItems").paginate({ldelim}
-		urlToFetchdata: "/result.php?act=pagination",
+		urlToFetchdata: "/paging.php?act=pagination",
 		totalPage:{$pages}
 	{rdelim});
 {rdelim});
